--- a/my-frontend/src/app.html
+++ b/my-frontend/src/app.html
@@ -3,7 +3,9 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="stylesheet" href="https://use.typekit.net/mcb8hsb.css">
 		<meta name="viewport" content="width=device-width" />
+		<title>DylanThomasNevell</title>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
